// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`About About component renders About component and matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="chakra-container css-1rhazec"
  >
    <h1
      class="chakra-heading css-1dklj6k"
    >
      Sobre o LogiCRUD
    </h1>
    <div
      class="css-1tvbi2x"
    >
      <div
        class="css-1r21lrd"
      >
        <div
          class="css-l47ab8"
        >
          <div
            class="css-c744rn"
          >
            <img
              alt="Imagem de um caminhão de transporte de carga"
              class="chakra-image css-1w8jvii"
              src="https://mayoliveii.s3.us-east-2.amazonaws.com/controller-logistic+(2)+(1).jpg"
            />
          </div>
        </div>
        <div
          class="css-bm0zes"
        >
          <div
            class="css-1pckkmz"
          />
        </div>
      </div>
      <div
        class="css-fu5aqi"
      >
        <div
          class="chakra-stack css-1wiyqiw"
        >
          <span
            class="css-1txca1f"
          >
            Gestão de Veículos
          </span>
          <span
            class="css-1txca1f"
          >
            Transporte de Carga
          </span>
        </div>
        <h2
          class="chakra-heading css-15loomw"
        >
          <p
            class="chakra-text css-c744rn"
          >
            Revolucionando a Gestão de Veículos de Transporte de Carga
          </p>
        </h2>
        <p
          class="chakra-text css-9ypu8m"
        >
          O LogiCRUD é uma aplicação CRUD (Create, Read, Update, Delete) projetada para simplificar e otimizar a gestão de veículos de transporte de carga. Com uma interface amigável e intuitiva, o LogiCRUD permite o registro, atualização e remoção eficiente de categorias de veículos. Além disso, oferece funcionalidades de pesquisa e filtragem, permitindo aos usuários localizar e visualizar categorias de veículos com base em títulos, IDs e intervalos de datas específicos.
        </p>
        <div
          class="chakra-stack css-4yvdfl"
        >
          <img
            alt="Avatar of Fernando Silva"
            class="chakra-image css-qj19jz"
            src="https://mayoliveii.s3.us-east-2.amazonaws.com/images/avatar-5.jpg"
          />
          <p
            class="chakra-text css-1bsgmhw"
          >
            Fernando Silva
          </p>
          <p
            class="chakra-text css-0"
          >
            —
          </p>
          <p
            class="chakra-text css-0"
          >
            1/1/2022
          </p>
        </div>
      </div>
    </div>
    <hr
      aria-orientation="horizontal"
      class="chakra-divider css-14mxqfx"
    />
    <div
      class="chakra-stack css-e133ed"
    >
      <h2
        class="chakra-heading css-1dklj6k"
      >
        Nossa Missão
      </h2>
      <p
        class="chakra-text css-c220zw"
      >
        No mundo acelerado de hoje, a eficiência na logística de transporte de carga é mais crucial do que nunca. Com o aumento constante da demanda global, as empresas de transporte enfrentam o desafio de gerenciar suas frotas de maneira eficaz e eficiente. É aqui que o LogiCRUD entra em cena.
      </p>
      <p
        class="chakra-text css-c220zw"
      >
        Nosso objetivo com o LogiCRUD é simplificar e revolucionar suas operações logísticas. Compreendemos que a gestão de uma frota de transporte pode ser uma tarefa complexa e demorada. Por isso, desenvolvemos uma solução que torna esse processo fácil e sem complicações.
      </p>
      <p
        class="chakra-text css-c220zw"
      >
        O LogiCRUD é uma aplicação CRUD (Create, Read, Update, Delete) intuitiva e fácil de usar, projetada especificamente para a gestão de veículos de transporte de carga. Com o LogiCRUD, você pode registrar, atualizar e remover informações de veículos com apenas alguns cliques. Além disso, nossa aplicação oferece funcionalidades de pesquisa e filtragem robustas, permitindo que você localize e visualize categorias de veículos com base em títulos, IDs e intervalos de datas específicos.
      </p>
      <p
        class="chakra-text css-c220zw"
      >
        Mas não paramos por aí. Estamos constantemente atualizando e melhorando o LogiCRUD, incorporando as mais recentes tecnologias de ponta para garantir que nossa aplicação permaneça na vanguarda da gestão de veículos de transporte de carga. Com o LogiCRUD, você pode ter certeza de que está usando a solução mais avançada e eficiente disponível no mercado.
      </p>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`About AboutAuthor component renders AboutAuthor component and matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="chakra-stack css-4yvdfl"
  >
    <img
      alt="Avatar of Fernando Silva"
      class="chakra-image css-qj19jz"
      src="https://mayoliveii.s3.us-east-2.amazonaws.com/images/avatar-5.jpg"
    />
    <p
      class="chakra-text css-1bsgmhw"
    >
      Fernando Silva
    </p>
    <p
      class="chakra-text css-0"
    >
      —
    </p>
    <p
      class="chakra-text css-0"
    >
      1/1/2022
    </p>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`About AboutTags component renders AboutTags component and matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="chakra-stack css-1wiyqiw"
  >
    <span
      class="css-1txca1f"
    >
      Gestão de Veículos
    </span>
    <span
      class="css-1txca1f"
    >
      Transporte de Carga
    </span>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;
